# duckdb-iceberg

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README-ADDENDUM.md  README.md  extension_config.cmake  rio.yml  vcpkg.json
src/: .aws.cpp.swp  CMakeLists.txt  aws.cpp  catalog_api.cpp  catalog_utils.cpp  ic_create_table_as_op.cpp  iceberg_extension.cpp  iceberg_manifest.cpp  iceberg_manifest_list.cpp  iceberg_options.cpp  iceberg_predicate.cpp  iceberg_value.cpp  manifest_file_reader.cpp  manifest_list_reader.cpp  manifest_reader.cpp
src/catalog/aws/lakeformation/: lf_client.cpp  lf_credential_cache.cpp  lf_credentials.cpp  lf_filter_parser.cpp  lf_table_metadata.cpp
src/catalog/rest/: iceberg_access_delegation.cpp  iceberg_catalog.cpp  iceberg_table_set.cpp
src/catalog/rest/api/: api_utils.cpp  catalog_api.cpp  catalog_utils.cpp  iceberg_add_snapshot.cpp  iceberg_create_table_request.cpp  iceberg_expression.cpp  iceberg_manifest_merge.cpp  iceberg_retry.cpp  iceberg_scan_planning.cpp  iceberg_table_update.cpp  iceberg_type.cpp  table_update.cpp  url_utils.cpp
src/catalog/rest/catalog_entry/: iceberg_schema_entry.cpp
src/catalog/rest/storage/: aws.cpp  iceberg_authorization.cpp  iceberg_table_secret_provider.cpp
src/catalog/rest/transaction/: iceberg_transaction.cpp  (+2 more)
src/common/: CMakeLists.txt  api_utils.cpp  iceberg.cpp  iceberg_default.cpp  iceberg_utils.cpp  url_utils.cpp  utils.cpp
src/copy/operator/: iceberg_copy.cpp
src/core/deletes/: iceberg_deletion_vector.cpp  iceberg_equality_delete.cpp  iceberg_positional_delete.cpp
src/core/expression/: iceberg_hash.cpp  iceberg_metrics.cpp  iceberg_transform.cpp  iceberg_value.cpp
src/core/metadata/: iceberg_table_metadata.cpp
src/deletes/: CMakeLists.txt  equality_delete.cpp
src/execution/helpers/: equality_delete_helpers.cpp
src/execution/operator/: iceberg_delete.cpp  iceberg_insert.cpp  iceberg_update.cpp
src/function/: iceberg_functions.cpp  iceberg_scalar_functions.cpp
src/function/copy/: iceberg_copy_function.cpp
src/function/ducklake/: ducklake_column.cpp  ducklake_delete_file.cpp  ducklake_partition_column.cpp  iceberg_to_ducklake.cpp
src/function/metadata/: iceberg_column_stats.cpp  iceberg_load_table_response.cpp  iceberg_metadata.cpp  iceberg_partition_stats.cpp  iceberg_schema_properties_functions.cpp  iceberg_table_partition_stats.cpp  iceberg_table_properties_functions.cpp  iceberg_table_stats.cpp  iceberg_view_metadata.cpp
src/function/scan/: iceberg_scan.cpp
src/iceberg_functions/: CMakeLists.txt  iceberg_avro_multi_file_list.cpp  iceberg_avro_multi_file_reader.cpp  iceberg_multi_file_list.cpp  iceberg_multi_file_reader.cpp  iceberg_scan.cpp  iceberg_to_ducklake.cpp
src/include/: api_utils.hpp  aws.hpp  catalog_api.hpp  catalog_utils.hpp  ic_create_table_as_op.hpp  iceberg_avro_multi_file_list.hpp  iceberg_functions.hpp  iceberg_logging.hpp  iceberg_multi_file_list.hpp  iceberg_multi_file_reader.hpp  iceberg_options.hpp  iceberg_types.hpp  manifest_reader.hpp  url_utils.hpp
src/include/common/: iceberg_constants.hpp  iceberg_default.hpp  iceberg_math.hpp
src/include/function/: iceberg_functions.hpp
src/include/metadata/: iceberg_column_definition.hpp  iceberg_manifest.hpp  iceberg_manifest_list.hpp  iceberg_partition_spec.hpp  iceberg_snapshot.hpp  iceberg_table_metadata.hpp  iceberg_table_schema.hpp  iceberg_transform.hpp
src/include/planning/: iceberg_multi_file_list.hpp  iceberg_optimizer.hpp  iceberg_scan_plan_provider.hpp
src/include/storage/: ic_catalog_set.hpp  ic_table_set.hpp  iceberg_insert.hpp  iceberg_merge_insert.hpp  iceberg_table_information.hpp  iceberg_transaction.hpp  iceberg_transaction_data.hpp  irc_authorization.hpp  irc_catalog.hpp  irc_table_set.hpp
src/metadata/: CMakeLists.txt  iceberg_column_definition.cpp  iceberg_partition_spec.cpp  iceberg_snapshot.cpp  iceberg_table_metadata.cpp  iceberg_table_schema.cpp  iceberg_transform.cpp
src/planning/: iceberg_multi_file_list.cpp  iceberg_multi_file_reader.cpp  iceberg_optimizer.cpp  iceberg_scan_plan_provider.cpp
src/planning/pruning/: iceberg_predicate.cpp
src/rest_catalog/objects/: CMakeLists.txt  add_encryption_key_update.cpp  add_partition_spec_update.cpp  add_schema_update.cpp  add_snapshot_update.cpp  add_sort_order_update.cpp  add_view_version_update.cpp  assert_ref_snapshot_id.cpp  assign_uuidupdate.cpp  blob_metadata.cpp  catalog_config.cpp  commit_report.cpp  commit_table_request.cpp  commit_view_request.cpp  completed_planning_result.cpp  content_file.cpp  count_map.cpp  create_namespace_request.cpp  create_namespace_response.cpp  create_table_request.cpp  create_view_request.cpp  data_file.cpp  delete_file.cpp  encrypted_key.cpp  equality_delete_file.cpp  error_model.cpp  expression.cpp  file_scan_task.cpp  list_namespaces_response.cpp  list_tables_response.cpp  literal_expression.cpp  load_table_result.cpp  load_view_result.cpp  oauth_client_credentials_request.cpp  oauth_error.cpp  oauth_token_exchange_request.cpp  oauth_token_response.cpp  partition_field.cpp  partition_spec.cpp  plan_table_scan_request.cpp  (+33 more)
src/storage/: CMakeLists.txt  ic_catalog.cpp  ic_catalog_set.cpp  ic_schema_set.cpp  ic_table_entry.cpp  ic_table_set.cpp  iceberg_delete.cpp  iceberg_insert.cpp  iceberg_merge_insert.cpp  iceberg_merge_into.cpp  iceberg_table_information.cpp  iceberg_transaction.cpp  iceberg_transaction_data.cpp  irc_authorization.cpp  irc_catalog.cpp  irc_schema_entry.cpp  irc_table_entry.cpp  irc_table_set.cpp  irc_transaction.cpp
src/storage/authorization/: CMakeLists.txt  azure.cpp  none.cpp  oauth2.cpp  sigv4.cpp
src/storage/catalog/: iceberg_catalog.cpp  iceberg_schema_entry.cpp  iceberg_table_set.cpp
src/storage/create_table/: CMakeLists.txt  iceberg_create_table_request.cpp
src/storage/table_update/: CMakeLists.txt  common.cpp  iceberg_add_snapshot.cpp
src/utils/: CMakeLists.txt
test/cpp/: CMakeLists.txt  test_compression_logic.cpp  test_credential_scope.cpp  test_merge_logic.cpp  test_merge_retry_logic.cpp  test_retry_logic.cpp  test_sigv4_utils.cpp
(+1701 files in other folders)
